kubernetes/namespaces/default/convertx/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convertx
spec:
  selector:
    matchLabels:
      app: convertx
  template:
    metadata:
      labels:
        app: convertx
    spec:
      containers:
        - image: ghcr.io/c4illin/convertx:latest
          imagePullPolicy: IfNotPresent
          name: convertx
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: convertx-data
              mountPath: /app/data
      volumes:
        - name: convertx-data
          persistentVolumeClaim:
            claimName: convertx-data
