kubernetes/namespaces/default/convertx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: convertx
spec:
  selector:
    app: convertx
  ports:
    - name: http
      targetPort: http
      port: 80
